# CF Global Posts Changelog

## 1.7
- Now **REQUIRES** 3.0
- Does a nice admin error if WordPress isn't set up as MultiSite
- Updated README.txt file

## 1.6
- * BUGFIX * stop infinite loop on post publish by removing the save_post hook for the global post plugin during addition of post.
- Adding convenience wrapper function for deleting a blog from the shadow blog
	- cfgp_delete_blog_from_shadow_blog();
- Added filters for the following:
	- Global Posts Blog's Domain name
	- Global Posts Blog's Site ID
	- Import increment amount (defaulted to 10)
- Added README.txt file

## 1.5
- Adding post information functions for easy retrieval of post's information while in the loop
	- cfgp_bloginfo();
	- cfgp_get_permalink();
	- cfgp_the_permalink();
	- cfgp_get_bloginfo();
	- cfgp_bloginfo();
	- cfgp_the_author_posts_link();
	- cfgp_comments_popup_link();
	- cfgp_edit_post_link();
- defining the import increment
- upping increment to 50, instead of 5
- changing the installed check to only return bool values.  That way we're sure that the installed check is returning as expected (instead of a possible zero value).

## 1.4
- Fixing tag saving on post saving.  WP 2.8 changed the way tags were saved (in the $_POST variable), so added a version_compare function to get the appropriate $_POST var to push to tags.

## 1.3
- Fixing bug when checking for site id of 999999
- define blog domain as constant
- For installed-check, utilize the get_blog_id_from_url function, and reference the blog domain's constant for the domain
- Remove the switch_to_site functions
- Added comment count to post meta of clone post
	- Comment count is updated on import and comment add/delete
- Added 'reset entire shadow blog' button to admin screen.  (only shown to user 'crowdfavorite' by default, but is filterable)
	- resent entire shadow blog is one bad function, so it's doubly-prompted and only shown to specific users.
		
	
## 1.1
- Changing shadow blog's site id to 999999, and setting as a constant