@@ -292,7 +292,10 @@ function cfgp_clone_post_on_publish($post_id, $post) {
 	
 	/* This is a revision, not something that needs to get cloned */
 	if ($post->post_status == 'inherit') { return; }
-
+	
+	/* This	is a scheduled posted, no need to clone	until published	*/
+	if ($post->post_status == 'future') { return; }
+	
 	/* Get the Shadow Blog's ID */
 	$cfgp_blog_id = cfgp_get_shadow_blog_id();
 	
